<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                style="@style/textstyletitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textSize="30sp" />


            <android.support.design.widget.TextInputLayout
                style="@style/textlable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/username">

                <EditText
                    android:id="@+id/username"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:drawablePadding="20dp"
                    android:layout_height="match_parent"
                    app:backgroundTint="@color/MonaLisa" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/textlable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password">

                <EditText
                    android:imeOptions="actionNext"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="20dp"
                    app:backgroundTint="@color/MonaLisa" />

            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/buttonstyle"
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/login" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>