<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".LeaveRequest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1.7"
                    android:padding="5dp"
                    android:src="@drawable/typeicon"
                    android:tint="@color/grass" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="0.3"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        style="@style/textstyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.2"
                        android:text="@string/leave_type" />

                    <Spinner
                        android:id="@+id/leaveTypeSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8">

                    </Spinner>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/startDatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1.7"
                    android:padding="5dp"
                    android:src="@drawable/date"
                    android:tint="@color/grass" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="0.3"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        style="@style/textstyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/start_date" />

                    <TextView
                        android:id="@+id/startdatetext"
                        style="@style/editextstyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/date" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/endDatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1.7"
                    android:padding="5dp"
                    android:src="@drawable/date"
                    android:tint="@color/grass" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="0.3"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        style="@style/textstyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/end_date" />


                    <TextView
                        android:id="@+id/enddatetext"
                        style="@style/editextstyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/date" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1.7"
                    android:padding="5dp"
                    android:src="@drawable/ttldate"
                    android:tint="@color/grass" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:hint="@string/ttldate"
                    style="@style/textlable"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/totalDate"
                        app:backgroundTint="@color/grass"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/textlable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:hint="@string/note">

                <EditText
                    style="@style/editextstyle"
                    android:id="@+id/noteReason"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/note"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/note"
                    android:drawableTint="@color/grass"
                    app:backgroundTint="@color/grass" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/requestLeave"
                style="@style/buttonstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/request" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>